
static_library("at_demo") {
    sources = [
       "at_demo.c",
    ]

    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//vendor\hisi\hi3861\hi3861\components\at\src",
    ]
}
