
static_library("wifi_demo") {
    sources = [
        # "wifi_sta_demo.c",
          "wifi_ap_demo.c",
    ]

    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//foundation/communication/interfaces/kits/wifi_lite/wifiservice",
        # "//third_party/lwip/src/include",
        "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include/",
    ]
}


