static_library("net_demo") {
    sources = [
        "demo.c",
        "wifi_utils.c",
        "tcp_server.c",
        "tcp_client.c",
        "udp_server.c",
        "udp_client.c",
        ]

    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//vendor/hisi/hi3861/hi3861/third_party/lwip_sack/include",
        "//foundation/communication/interfaces/kits/wifi_lite/wifiservice",
    ]
}
